tests/ui/impl-trait/in-trait/false-positive-predicate-entailment-error.current.stderr
error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:36:5
   |
LL | /     fn autobatch<F>(self) -> impl Trait
LL | |
LL | |
LL | |
...  |
LL | |     where
LL | |         F: Callback<Self::CallbackArg>,
   | |_______________________________________^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:14:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here
help: consider further restricting this bound
   |
LL |         F: Callback<Self::CallbackArg> + MyFn<i32>,
   |                                        +++++++++++

error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:36:30
   |
LL |     fn autobatch<F>(self) -> impl Trait
   |                              ^^^^^^^^^^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:14:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here
note: required by a bound in `<Sender as ChannelSender>::autobatch`
  --> $DIR/false-positive-predicate-entailment-error.rs:43:12
   |
LL |     fn autobatch<F>(self) -> impl Trait
   |        --------- required by a bound in this associated function
...
LL |         F: Callback<Self::CallbackArg>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `<Sender as ChannelSender>::autobatch`
help: consider further restricting this bound
   |
LL |         F: Callback<Self::CallbackArg> + MyFn<i32>,
   |                                        +++++++++++

error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:36:5
   |
LL | /     fn autobatch<F>(self) -> impl Trait
LL | |
LL | |
LL | |
...  |
LL | |     where
LL | |         F: Callback<Self::CallbackArg>,
   | |_______________________________________^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:14:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider further restricting this bound
   |
LL |         F: Callback<Self::CallbackArg> + MyFn<i32>,
   |                                        +++++++++++

error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:36:30
   |
LL |     fn autobatch<F>(self) -> impl Trait
   |                              ^^^^^^^^^^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:14:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here

error[E0277]: the trait bound `F: Callback<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:27:12
   |
LL |         F: Callback<Self::CallbackArg>;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:14:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here

error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:36:5
   |
LL | /     fn autobatch<F>(self) -> impl Trait
LL | |
LL | |
LL | |
...  |
LL | |     where
LL | |         F: Callback<Self::CallbackArg>,
   | |_______________________________________^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required for `F` to implement `Callback<i32>`
  --> $DIR/false-positive-predicate-entailment-error.rs:14:21
   |
LL | impl<A, F: MyFn<A>> Callback<A> for F {
   |            -------  ^^^^^^^^^^^     ^
   |            |
   |            unsatisfied trait bound introduced here
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider further restricting this bound
   |
LL |         F: Callback<Self::CallbackArg> + MyFn<i32>,
   |                                        +++++++++++

error[E0277]: the trait bound `F: MyFn<i32>` is not satisfied
  --> $DIR/false-positive-predicate-entailment-error.rs:43:12
   |
LL |         F: Callback<Self::CallbackArg>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `MyFn<i32>` is not implemented for `F`
   |
note: required by a bound in `Callback`
  --> $DIR/false-positive-predicate-entailment-error.rs:10:20
   |
LL | trait Callback<A>: MyFn<A, Output = Self::Ret> {
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Callback`
help: consider further restricting this bound
   |
LL |         F: Callback<Self::CallbackArg> + MyFn<i32>,
   |                                        +++++++++++

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0277`.
